--- a/3_exercicio/index.html
+++ b/3_exercicio/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício</title>
-    <style>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="github.com/Gunarks">
+        <title>Exercício</title>
+        <style>
             h1 {
                 text-align: center;
                 background-color: black;
@@ -13,46 +15,49 @@
                 padding: 50px;
                 text-transform: uppercase;
             }
-    </style>
-</head>
-<body>
-    <h1>Fazendo um relógio</h1>
 
-    <div class="watch">
+        </style>
+    </head>
 
-    </div>
+    <body>
+        <h1>Fazendo um relógio</h1>
+
+        <div class="watch">
+
+        </div>
 
 
-    <script>
-        (()=> {
+        <script>
+            (() => {
 
-            let $relogio = document.querySelector('.watch');
+                let $relogio = document.querySelector('.watch');
 
-            function getHour() {
-                let data = new Date();
+                function getHour() {
+                    let data = new Date();
 
-                let h = format(data.getHours());
-                let m = format(data.getMinutes());
-                let s = format(data.getSeconds());
+                    let h = format(data.getHours());
+                    let m = format(data.getMinutes());
+                    let s = format(data.getSeconds());
 
-                return h + ':' + m + ':' + s;
-            }
+                    return h + ':' + m + ':' + s;
+                }
 
-            function format(t) {
-                return t < 10 ? '0' + t : t;
-            }
+                function format(t) {
+                    return t < 10 ? '0' + t : t;
+                }
 
-            function mostrarRelogio(atual){
-                $relogio.textContent = atual;
-            }
+                function mostrarRelogio(atual) {
+                    $relogio.textContent = atual;
+                }
 
-            mostrarRelogio(getHour());
+                mostrarRelogio(getHour());
 
-            setInterval(()=> {
-                mostrarRelogio(getHour()), 1000
-            });
+                setInterval(() => {
+                    mostrarRelogio(getHour()), 1000
+                });
 
-        })()
-    </script>
-</body>
+            })()
+        </script>
+    </body>
+
 </html>
